--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -20,7 +20,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="png" type="image/png" href="C:\Users\Tomer\Folders\MyFirstWeb\LoginPage\LoginPageImage.png">
+    <link rel="png" type="image/png" href="LoginPage/LoginPageImage.png">
 
 </head>
 <body>
