--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -68,7 +68,7 @@
 			<!-- Replace play.cubecraft.net with your server IP address -->
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
-			<p>Join <span class="sip" data-ip="rooms-clearing.gl.joinmc.link">
+			<p>Join <span class="sip" data-ip="hypixel.net">
 			</span> other players on <span class="ip">rooms-clearing.gl.joinmc.link</span></p>
 		</div>
 	</div>
