--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -69,7 +69,7 @@
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
 			<p>Join <span class="sip" data-ip="hypixel.net">
-			</span> other players on <span class="ip">rooms-clearing.gl.joinmc.link</span></p>
+			</span> other players on <span class="ip">hypixel.net</span></p>
 		</div>
 	</div>
 
