--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -6,10 +6,10 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>T_Game Official Website</title>
-	<meta name="description" content="T_Game Official Website You can join with the IP 'hypixel.net'.">
+	<meta name="description" content="T_Game Official Website You can join with the IP 'IP'.">
 	<meta property="og:title" content="T_Game Official Website">
 	<meta property="og:site_name" content="T_Game">
-	<meta property="og:description" content="T_Game is a new and awesome Minecraft server. You can join with the IP 'hypixel.net'.">
+	<meta property="og:description" content="T_Game is a new and awesome Minecraft server. You can join with the IP 'IP'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
@@ -68,7 +68,7 @@
 			<!-- Replace play.cubecraft.net with your server IP address -->
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
-			<p>Join <span class="sip" data-ip="hypixel.net">
+			<p>Join <span class="sip" data-ip="IP">
 			</span> other players on <span class="ip">hypixel.net</span></p>
 		</div>
 	</div>
