--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -48,7 +48,7 @@
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">donate on our</p>
 				<p class="title">Store</p>
-				<p herf="file:///C:/Users/Tomer/OneDrive/%D7%A9%D7%95%D7%9C%D7%97%D7%9F%20%D7%94%D7%A2%D7%91%D7%95%D7%93%D7%94/T_GAME%20Server/StoreWebsite/Store.html"></p>
+				<p herf="https://t_store.craftingstore.net"></p>
 			</div>
 			</a>
 
